# malt

./: .gitignore  BandSplitter edited.jsfx  BandSplitter.jsfx  Cargo.toml  README.md  bundler.toml  justfile
src/: biquad.rs  envelope.rs  filters.rs  gui.rs  lib.rs  main.rs  oscillator.rs  parameter_formatters.rs  pattern.rs  rchoscillators.rs  splitter.rs  svf.rs  voice.rs
src/gui/: button.rs  editor.rs  knob.rs  knobtext.rs  mod.rs  palette.rs
src/widgets/: knob.rs  mod.rs  value_text.rs
