[package]
name = "sai_sampler"
version = "0.1.0"
edition = "2021"
authors = ["James Walker <your@email.com>"]
license = "ISC"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "An audio sampler"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayvec = "0.7.4"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
once_cell = "1.19.0"
ringbuffer = "0.15.0"
thiserror = "1.0.63"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
