[package]
name = "malt"
version = "0.1.0"
edition = "2021"
authors = ["James Walker <james.chunho@gmail.com>"]
license = "ISC"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A multiband sidechain plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayvec = "0.7.4"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/jamesWalker55/nih-plug.git", rev = "3a7a39a3ffeb7ab529a79b8f1eb5c2fae3ebb375", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/jamesWalker55/nih-plug.git", rev = "3a7a39a3ffeb7ab529a79b8f1eb5c2fae3ebb375" }
egui_extras = { version = "0.29.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] } # Add the types you want support for
once_cell = "1.19.0"
ringbuffer = "0.15.0"
thiserror = "1.0.63"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
